package com.directi.training.dip.exercise_refactored;

public interface Database {
    int write(String inputString);
}
