@startuml
interface Database {
    +write(inputString: String): int
}

class EncodingModule {
    -database: Database
    +EncodingModule(database: Database)
    +encodeWithFiles(): void
    +encodeBasedOnNetworkAndDatabase(): void
}

class EncodingModuleClient {
    +main(args: String[]): void
}

class MyDatabase {
    -_data: Map<Integer, String>
    -_count: int
    +write(inputString: String): int
}

Database <|-- MyDatabase
EncodingModule --> Database
EncodingModuleClient --> EncodingModule
@enduml
